[package]
name = "twilight-andesite"
version = "0.2.0"
authors = ["Han Cen <hi@chamburr.com>"]
edition = "2018"

[dependencies]
async-tungstenite = { default-features = false, features = ["tokio-runtime"], version = "0.12" }
dashmap = { default-features = false, version = "4.0" }
futures-channel = { default-features = false, features = ["std"], version = "0.3" }
futures-util = { default-features = false, features = ["bilock", "std", "unstable"], version = "0.3" }
http = { default-features = false, optional = true, version = "0.2" }
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1" }
percent-encoding = { default-features = false, optional = true, version = "2.0" }
reqwest = { default-features = false, version = "0.11" }
serde = { default-features = false, features = ["derive", "std"], version = "1.0" }
serde_json = { default-features = false, version = "1.0" }
serde_with = { default-features = false, features = ["macros"], version = "1.5" }
tokio = { default-features = false, features = ["net", "rt-multi-thread", "time"], version = "1.0" }
twilight-model = { default-features = false, version = "0.3" }

[dev-dependencies]
serde_test = { default-features = false, version = "1.0" }
static_assertions = { default-features = false, version = "1.0" }
tokio = { default-features = false, features = ["macros"], version = "1.0" }
twilight-gateway = { version = "0.3" }
twilight-http = { version = "0.3" }

[features]
default = ["http-support", "rustls"]
http-support = ["http", "percent-encoding"]
native = ["async-tungstenite/tokio-native-tls"]
rustls = ["async-tungstenite/tokio-rustls"]
